--- a/index.html
+++ b/index.html
@@ -134,6 +134,21 @@ header{background:linear-gradient(135deg,var(--brown),var(--amber-dark));padding
 .map-link:hover{text-decoration:underline}
 .toast{position:fixed;bottom:90px;left:50%;transform:translateX(-50%) translateY(20px);background:var(--brown);color:var(--cream);padding:12px 24px;border-radius:50px;font-size:15px;opacity:0;pointer-events:none;transition:all .3s;white-space:nowrap;z-index:999}
 .toast.show{opacity:1;transform:translateX(-50%) translateY(0)}
+
+/* PIN SCREEN */
+.pin-screen{position:fixed;inset:0;background:linear-gradient(135deg,var(--brown),var(--amber-dark));z-index:500;display:flex;align-items:center;justify-content:center;flex-direction:column;padding:40px 30px}
+.pin-screen.hidden{display:none}
+.pin-title{font-family:'Playfair Display',serif;color:var(--cream);font-size:26px;font-weight:700;margin-bottom:8px;text-align:center}
+.pin-sub{color:var(--amber-light);font-size:15px;font-style:italic;margin-bottom:40px;text-align:center}
+.pin-dots{display:flex;gap:16px;margin-bottom:40px}
+.pin-dot{width:18px;height:18px;border-radius:50%;background:rgba(255,255,255,.3);transition:all .2s}
+.pin-dot.filled{background:var(--amber-light)}
+.pin-pad{display:grid;grid-template-columns:repeat(3,1fr);gap:14px;width:100%;max-width:280px}
+.pin-btn{background:rgba(255,255,255,.15);border:2px solid rgba(255,255,255,.2);border-radius:18px;padding:18px;font-size:24px;font-family:'Playfair Display',serif;color:var(--cream);cursor:pointer;transition:all .2s;text-align:center}
+.pin-btn:active{background:rgba(255,255,255,.3);transform:scale(.95)}
+.pin-btn.skip{background:transparent;border-color:transparent;font-size:14px;color:var(--amber-light);font-family:'Lora',serif;padding:14px}
+.pin-error{color:#ff8a80;font-size:15px;margin-top:16px;font-style:italic;min-height:24px;text-align:center}
+.lock-btn{position:fixed;bottom:24px;left:20px;background:rgba(74,44,17,.7);color:var(--cream);border:none;border-radius:50px;padding:12px 18px;font-size:14px;font-family:'Lora',serif;cursor:pointer;z-index:90}
 </style>
 </head>
 <body>
@@ -271,6 +286,38 @@ header{background:linear-gradient(135deg,var(--brown),var(--amber-dark));padding
   </div>
 </div>
 
+
+<!-- PIN SCREEN -->
+<div class="pin-screen" id="pinScreen">
+  <div style="font-size:60px;margin-bottom:16px">🌳</div>
+  <div class="pin-title">Arbre Généalogique</div>
+  <div class="pin-sub">Entrez votre PIN pour modifier</div>
+  <div class="pin-dots">
+    <div class="pin-dot" id="dot0"></div>
+    <div class="pin-dot" id="dot1"></div>
+    <div class="pin-dot" id="dot2"></div>
+    <div class="pin-dot" id="dot3"></div>
+  </div>
+  <div class="pin-pad">
+    <button class="pin-btn" onclick="pinPress('1')">1</button>
+    <button class="pin-btn" onclick="pinPress('2')">2</button>
+    <button class="pin-btn" onclick="pinPress('3')">3</button>
+    <button class="pin-btn" onclick="pinPress('4')">4</button>
+    <button class="pin-btn" onclick="pinPress('5')">5</button>
+    <button class="pin-btn" onclick="pinPress('6')">6</button>
+    <button class="pin-btn" onclick="pinPress('7')">7</button>
+    <button class="pin-btn" onclick="pinPress('8')">8</button>
+    <button class="pin-btn" onclick="pinPress('9')">9</button>
+    <button class="pin-btn skip" onclick="pinSkip()">👁️ Voir seulement</button>
+    <button class="pin-btn" onclick="pinPress('0')">0</button>
+    <button class="pin-btn" onclick="pinDelete()">⌫</button>
+  </div>
+  <div class="pin-error" id="pinError"></div>
+</div>
+
+<!-- LOCK BUTTON -->
+<button class="lock-btn" id="lockBtn" style="display:none" onclick="lockApp()">🔒 Sperren</button>
+
 <div class="toast" id="toast"></div>
 
 <script>
@@ -318,7 +365,7 @@ function initDemo() {
 
 function updateSubtitle() {
   const noms = [...new Set(persons.map(p=>p.nom).filter(Boolean))];
-  document.getElementById('subTitle').textContent = noms.length ? noms.slice(0,3).join(' · ') : 'Notre famille';
+  document.getElementById('subTitle').textContent = 'Monsigny Bareau';
 }
 
 // ============================================================
@@ -635,7 +682,103 @@ function openOverlay(id){document.getElementById(id).classList.add('open');docum
 function closeOverlay(id){document.getElementById(id).classList.remove('open');document.body.style.overflow=''}
 function showToast(msg){const t=document.getElementById('toast');t.textContent=msg;t.classList.add('show');setTimeout(()=>t.classList.remove('show'),2500)}
 
+
+// ============================================================
+// PIN SYSTEM
+// ============================================================
+const CORRECT_PIN = '2225';
+let pinInput = '';
+let isUnlocked = false;
+
+function initPin() {
+  // Show PIN screen on load
+  document.getElementById('pinScreen').classList.remove('hidden');
+}
+
+function pinPress(digit) {
+  if (pinInput.length >= 4) return;
+  pinInput += digit;
+  updateDots();
+  if (pinInput.length === 4) {
+    setTimeout(checkPin, 200);
+  }
+}
+
+function pinDelete() {
+  pinInput = pinInput.slice(0, -1);
+  updateDots();
+  document.getElementById('pinError').textContent = '';
+}
+
+function updateDots() {
+  for (let i = 0; i < 4; i++) {
+    document.getElementById('dot'+i).classList.toggle('filled', i < pinInput.length);
+  }
+}
+
+function checkPin() {
+  if (pinInput === CORRECT_PIN) {
+    isUnlocked = true;
+    document.getElementById('pinScreen').classList.add('hidden');
+    document.getElementById('lockBtn').style.display = 'block';
+    showToast('🔓 Bienvenue ! Mode édition activé');
+  } else {
+    document.getElementById('pinError').textContent = '❌ Code incorrect, réessayez';
+    pinInput = '';
+    updateDots();
+    // Shake animation
+    const pad = document.querySelector('.pin-dots');
+    pad.style.transform = 'translateX(-10px)';
+    setTimeout(() => pad.style.transform = 'translateX(10px)', 100);
+    setTimeout(() => pad.style.transform = 'translateX(0)', 200);
+  }
+}
+
+function pinSkip() {
+  // View only mode - no editing
+  isUnlocked = false;
+  document.getElementById('pinScreen').classList.add('hidden');
+  // Hide add/edit buttons
+  document.querySelector('.fab').style.display = 'none';
+  document.querySelector('.btn-add').style.display = 'none';
+}
+
+function lockApp() {
+  isUnlocked = false;
+  pinInput = '';
+  updateDots();
+  document.getElementById('pinError').textContent = '';
+  document.getElementById('pinScreen').classList.remove('hidden');
+  document.getElementById('lockBtn').style.display = 'none';
+  document.querySelector('.fab').style.display = 'flex';
+  document.querySelector('.btn-add').style.display = 'block';
+  closeOverlay('detailOverlay');
+  closeOverlay('formOverlay');
+}
+
+// Override openForm to require PIN
+const _origOpenForm = openForm;
+function openForm(id) {
+  if (!isUnlocked) {
+    showToast('🔒 PIN erforderlich zum Bearbeiten');
+    return;
+  }
+  _origOpenForm(id);
+}
+
+// Override doConfirmDelete to require PIN
+const _origDelete = doConfirmDelete;
+function doConfirmDelete(id, name) {
+  if (!isUnlocked) {
+    showToast('🔒 PIN erforderlich zum Löschen');
+    return;
+  }
+  _origDelete(id, name);
+}
+
+
 loadData();
+initPin();
 </script>
 </body>
 </html>
